// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`Button\` Component disabled variant render 1`] = `
<DocumentFragment>
  <button
    class="musae-button button__rippleable button__medium button__rounded button__default button__filled theme__label.large"
    disabled=""
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: rgba(103,80,164,0.08); --color-on-surface-opacity-12: rgba(29,27,32,0.12); --color-on-surface-opacity-38: rgba(29,27,32,0.38);"
    type="button"
  >
    disabled filled
  </button>
  <button
    class="musae-button button__rippleable button__medium button__rounded button__default button__outlined theme__label.large"
    disabled=""
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: rgba(103,80,164,0.08); --color-on-surface-opacity-12: rgba(29,27,32,0.12); --color-on-surface-opacity-38: rgba(29,27,32,0.38);"
    type="button"
  >
    disabled outlined
  </button>
  <button
    class="musae-button button__rippleable button__medium button__rounded button__default button__text theme__label.large"
    disabled=""
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: rgba(103,80,164,0.08); --color-on-surface-opacity-12: rgba(29,27,32,0.12); --color-on-surface-opacity-38: rgba(29,27,32,0.38);"
    type="button"
  >
    disabled text
  </button>
</DocumentFragment>
`;

exports[`\`Button\` Component variant render 1`] = `
<DocumentFragment>
  <button
    class="musae-button button__default button__rippleable button__medium button__filled button__rounded theme__label.large"
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: rgba(103,80,164,0.08); --color-on-surface-opacity-12: rgba(29,27,32,0.12); --color-on-surface-opacity-38: rgba(29,27,32,0.38);"
    type="button"
  >
    filled
  </button>
  <button
    class="musae-button button__default button__rippleable button__medium button__outlined button__rounded theme__label.large"
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: rgba(103,80,164,0.08); --color-on-surface-opacity-12: rgba(29,27,32,0.12); --color-on-surface-opacity-38: rgba(29,27,32,0.38);"
    type="button"
  >
    outlined
  </button>
  <button
    class="musae-button button__default button__rippleable button__medium button__text button__rounded theme__label.large"
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: rgba(103,80,164,0.08); --color-on-surface-opacity-12: rgba(29,27,32,0.12); --color-on-surface-opacity-38: rgba(29,27,32,0.38);"
    type="button"
  >
    text
  </button>
</DocumentFragment>
`;
